--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,14 @@
-# backend/Dockerfile
-FROM golang:1.23.3-alpine
+FROM golang:1.23-alpine
+
 WORKDIR /app
-COPY . .
+
+COPY go.mod go.sum ./
 RUN go mod download
+
+COPY . .
+
 RUN go build -o main .
+
 EXPOSE 8080
+
 CMD ["./main"]
